fix modules dependencies

--- a/omod/pom.xml
+++ b/omod/pom.xml
@@ -22,7 +22,16 @@
 
         <dependency>
             <groupId>org.openmrs.module</groupId>
+            <artifactId>appui-omod</artifactId>
+            <version>${appuiVersion}</version>
+            <type>jar</type>
+            <scope>provided</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.openmrs.module</groupId>
             <artifactId>registrationapp-omod</artifactId>
+            <version>${registrationappVersion}</version>
         </dependency>
 						
         <dependency>
@@ -42,16 +51,19 @@
          <dependency>
             <groupId>org.openmrs.module</groupId>
             <artifactId>coreapps-omod</artifactId>
+             <version>${coreappsVersion}</version>
          </dependency>
          
          <dependency>
             <groupId>org.openmrs.module</groupId>
             <artifactId>formentryapp-omod</artifactId>
+             <version>${formentryappVersion}</version>
          </dependency>
 
         <dependency>
             <groupId>org.openmrs.module</groupId>
             <artifactId>webservices.rest-omod-common</artifactId>
+            <version>${webservicesRestModuleVersion}</version>
         </dependency>
 
         <dependency>
