added proper provider scope to several module dependencies

--- a/omod/pom.xml
+++ b/omod/pom.xml
@@ -32,6 +32,7 @@
             <groupId>org.openmrs.module</groupId>
             <artifactId>registrationapp-omod</artifactId>
             <version>${registrationappVersion}</version>
+            <scope>provided</scope>
         </dependency>
 						
         <dependency>
@@ -52,18 +53,21 @@
             <groupId>org.openmrs.module</groupId>
             <artifactId>coreapps-omod</artifactId>
              <version>${coreappsVersion}</version>
+             <scope>provided</scope>
          </dependency>
          
          <dependency>
             <groupId>org.openmrs.module</groupId>
             <artifactId>formentryapp-omod</artifactId>
              <version>${formentryappVersion}</version>
+             <scope>provided</scope>
          </dependency>
 
         <dependency>
             <groupId>org.openmrs.module</groupId>
             <artifactId>webservices.rest-omod-common</artifactId>
             <version>${webservicesRestModuleVersion}</version>
+            <scope>provided</scope>
         </dependency>
 
         <dependency>
