change apps config to reflect the new module name

--- a/omod/src/main/resources/apps/formentry_app.json
+++ b/omod/src/main/resources/apps/formentry_app.json
@@ -5,7 +5,7 @@
         "extensions": [
             {
                 "id": "formentryapp.forms.homepageLink",
-                "extensionPointId": "org.openmrs.referenceapplication.configuremetadataLink",
+                "extensionPointId": "org.openmrs.imbemr.configuremetadataLink",
                 "type": "link",
                 "label": "formentryapp.manageforms",
                 "url": "formentryapp/forms.page?app=formentryapp.forms",
