--- a/omod/src/main/resources/apps/refapp_registrationapp_app.json
+++ b/omod/src/main/resources/apps/refapp_registrationapp_app.json
@@ -1,16 +1,16 @@
 [
     {
-        "id": "referenceapplication.registrationapp.registerPatient",
+        "id": "imbemr.registrationapp.registerPatient",
         "instanceOf": "registrationapp.registerPatient",
         "label": "Register Patient",
         "description": "Create a new Patient Record",
         "extensions": [
             {
-                "id": "referenceapplication.registrationapp.registerPatient.homepageLink",
-                "extensionPointId": "org.openmrs.referenceapplication.homepageLink",
+                "id": "imbemr.registrationapp.registerPatient.homepageLink",
+                "extensionPointId": "org.openmrs.imbemr.homepageLink",
                 "type": "link",
-                "label": "referenceapplication.app.registerPatient.label",
-                "url": "registrationapp/registerPatient.page?appId=referenceapplication.registrationapp.registerPatient",
+                "label": "imbemr.app.registerPatient.label",
+                "url": "registrationapp/registerPatient.page?appId=imbemr.registrationapp.registerPatient",
                 "icon": "icon-user",
                 "order": 1,
                 "requiredPrivilege": "App: registrationapp.registerPatient"
