--- a/omod/src/main/resources/apps/relationships_app.json
+++ b/omod/src/main/resources/apps/relationships_app.json
@@ -1,10 +1,10 @@
 [
     {
-        "id": "referenceapplication.personalRelationships",
+        "id": "imbemr.personalRelationships",
         "instanceOf": "coreapps.template.relationships",
         "description": "Lists personal relationships (excluding clinical ones from the reference application)",
         "order": 23,
-        "featureToggle": "referenceapplication.personalRelationships",
+        "featureToggle": "imbemr.personalRelationships",
         "config": {
             "excludeRelationshipTypes": [
                 "8d919b58-c2cc-11de-8d13-0010c6dffd0f", //Doctor/Patient
@@ -17,12 +17,12 @@
                 "extensionPointId": "patientDashboard.overallActions",
                 "type": "link",
                 "label": "coreapps.task.relationships.label",
-                "url": "coreapps/relationships/list.page?app=referenceapplication.personalRelationships&patientId={{patient.uuid}}",
+                "url": "coreapps/relationships/list.page?app=imbemr.personalRelationships&patientId={{patient.uuid}}",
                 "icon": "icon-group",
                 "order": 23,
-                "requiredPrivilege": "Task: referenceapplication.personalRelationships"
+                "requiredPrivilege": "Task: imbemr.personalRelationships"
             }
         ],
-        "requiredPrivilege": "Task: referenceapplication.personalRelationships"
+        "requiredPrivilege": "Task: imbemr.personalRelationships"
     }
 ]
