--- a/omod/src/main/resources/apps/vitals_app.json
+++ b/omod/src/main/resources/apps/vitals_app.json
@@ -1,23 +1,23 @@
 [
     {
-        "id": "referenceapplication.vitals",
+        "id": "imbemr.vitals",
         "instanceOf": "coreapps.template.findPatient",
         "extensions": [
             {
-                "id": "referenceapplication.vitals",
-			    "extensionPointId": "org.openmrs.referenceapplication.homepageLink",
+                "id": "imbemr.vitals",
+			    "extensionPointId": "org.openmrs.imbemr.homepageLink",
 			    "type": "link",
-			    "label": "referenceapplication.app.capturevitals.title",
-			    "url": "coreapps/findpatient/findPatient.page?app=referenceapplication.vitals",
+			    "label": "imbemr.app.capturevitals.title",
+			    "url": "coreapps/findpatient/findPatient.page?app=imbemr.vitals",
 			    "icon": "icon-vitals",
 			    "order": 1,
-			    "requiredPrivilege": "App: referenceapplication.vitals"
+			    "requiredPrivilege": "App: imbemr.vitals"
             }
         ],
         "config": {
             "afterSelectedUrl": "/coreapps/vitals/patient.page?patientId={{patientId}}",
-            "label": "referenceapplication.app.capturevitals.title",
-            "heading": "referenceapplication.app.capturevitalsforpatient.label"
+            "label": "imbemr.app.capturevitals.title",
+            "heading": "imbemr.app.capturevitalsforpatient.label"
         }
     }
 ]
