add back all coreapps via referenceapp extension ID

--- a/omod/src/main/resources/apps/homepage_app.json
+++ b/omod/src/main/resources/apps/homepage_app.json
@@ -3,7 +3,7 @@
         "id": "imbemr.homepage",
         "extensionPoints": [
             {
-                "id": "org.openmrs.imbemr.homepageLink",
+                "id": "org.openmrs.referenceapplication.homepageLink",
                 "description": "imbemr.homepageExt.description"
             }
         ]
