--- a/omod/pom.xml
+++ b/omod/pom.xml
@@ -12,6 +12,11 @@
 	<name>IMB EMR Module OMOD</name>
 	<description>OMOD project for IMB EMR</description>
 
+    <properties>
+        <gem.home>${basedir}/rubygems</gem.home>
+        <gem.path>${basedir}/rubygems</gem.path>
+    </properties>
+
 	<dependencies>
         <dependency>
             <groupId>${project.parent.groupId}</groupId>
@@ -252,7 +257,7 @@
                 </executions>
                 <configuration>
                     <jrubyVersion>1.7.10</jrubyVersion>
-                    <execArgs>${project.build.directory}/rubygems/bin/compass compile ${basedir}/src/main/compass</execArgs>
+                    <execArgs>${gem.home}/bin/compass compile ${basedir}/src/main/compass</execArgs>
                 </configuration>
             </plugin>
             
@@ -278,7 +283,7 @@
                         </executions>
                         <configuration>
                             <jrubyVersion>1.7.10</jrubyVersion>
-                            <execArgs>${project.build.directory}/rubygems/bin/compass watch ${basedir}/src/main/compass</execArgs>
+                            <execArgs>${gem.home}/bin/compass watch ${basedir}/src/main/compass</execArgs>
                         </configuration>
                     </plugin>
                 </plugins>
