--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,7 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <openMRSVersion>1.9.9</openMRSVersion>
-        <appframeworkVersion>2.4-SNAPSHOT</appframeworkVersion>
+        <appframeworkVersion>2.4</appframeworkVersion>
         <appuiVersion>1.3-SNAPSHOT</appuiVersion>
         <calculationVersion>1.1</calculationVersion>
         <idgenVersion>4.0</idgenVersion>
@@ -46,7 +46,7 @@
         <serializationxstreamVersion>0.2.8</serializationxstreamVersion>
         <uicommonsVersion>1.4</uicommonsVersion>
         <uiframeworkVersion>3.4-SNAPSHOT</uiframeworkVersion>
-        <webservicesRestModuleVersion>2.12-SNAPSHOT</webservicesRestModuleVersion>
+        <webservicesRestModuleVersion>2.12</webservicesRestModuleVersion>
 	</properties>
 
     <dependencies>
