--- a/pom.xml
+++ b/pom.xml
@@ -30,23 +30,31 @@
 	<modules>
 		<module>api</module>
 		<module>omod</module>
+        <module>distro</module>
 	</modules>
 	
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <openMRSVersion>1.9.9</openMRSVersion>
         <appframeworkVersion>2.4</appframeworkVersion>
-        <appuiVersion>1.3-SNAPSHOT</appuiVersion>
+        <appuiVersion>1.3</appuiVersion>
         <calculationVersion>1.1</calculationVersion>
         <idgenVersion>4.0</idgenVersion>
         <htmlformentryVersion>2.6</htmlformentryVersion>
+        <htmlformentry19extVersion>1.6.1</htmlformentry19extVersion>
+        <htmlformflowsheetVersion>1.3</htmlformflowsheetVersion>
+        <htmlwidgetsVersion>1.7.0</htmlwidgetsVersion>
+        <logicVersion>0.5.2</logicVersion>
+        <metadatamappingVersion>1.0.2</metadatamappingVersion>
         <metadatasharingVersion>1.1.9</metadatasharingVersion>
         <namephoneticsVersion>1.5</namephoneticsVersion>
         <reportingVersion>0.9.8.1</reportingVersion>
-        <serializationxstreamVersion>0.2.8</serializationxstreamVersion>
+        <reportingcompatibilityVersion>1.5.8</reportingcompatibilityVersion>
+        <serializationVersion>0.2.8</serializationVersion>
+        <syncVersion>1.2</syncVersion>
         <uicommonsVersion>1.4</uicommonsVersion>
-        <uiframeworkVersion>3.4-SNAPSHOT</uiframeworkVersion>
-        <webservicesRestModuleVersion>2.12</webservicesRestModuleVersion>
+        <uiframeworkVersion>3.4</uiframeworkVersion>
+        <webservicesRestVersion>2.12</webservicesRestVersion>
 	</properties>
 
     <dependencies>
@@ -75,7 +83,6 @@
             <scope>test</scope>
         </dependency>
 
-        <!-- BEGIN include openmrs-web here because we need Jackson in the API layer. When we move jackson from openmrs-web to openmrs-api, move these to omod/pom.xml  -->
         <dependency>
             <groupId>org.openmrs.web</groupId>
             <artifactId>openmrs-web</artifactId>
@@ -91,7 +98,6 @@
             <type>test-jar</type>
             <scope>test</scope>
         </dependency>
-
 
         <dependency>
             <groupId>org.openmrs.module</groupId>
@@ -160,7 +166,7 @@
         <dependency>
             <groupId>org.openmrs.module</groupId>
             <artifactId>serialization.xstream-api</artifactId>
-            <version>${serializationxstreamVersion}</version>
+            <version>${serializationVersion}</version>
             <scope>provided</scope>
         </dependency>
 
