--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,8 @@
         <appuiVersion>1.3</appuiVersion>
         <calculationVersion>1.1</calculationVersion>
         <idgenVersion>4.0</idgenVersion>
+        <formfilterVersion>1.2</formfilterVersion>
+        <groovyVersion>2.2.4</groovyVersion>
         <htmlformentryVersion>2.6</htmlformentryVersion>
         <htmlformentry19extVersion>1.6.1</htmlformentry19extVersion>
         <htmlformflowsheetVersion>1.3</htmlformflowsheetVersion>
@@ -48,6 +50,8 @@
         <metadatamappingVersion>1.0.2</metadatamappingVersion>
         <metadatasharingVersion>1.1.9</metadatasharingVersion>
         <namephoneticsVersion>1.5</namephoneticsVersion>
+        <patientsummaryVersion>1.4.0</patientsummaryVersion>
+        <pihrwandahivflowsheetVersion>0.5.5</pihrwandahivflowsheetVersion>
         <reportingVersion>0.9.8.1</reportingVersion>
         <reportingcompatibilityVersion>1.5.8</reportingcompatibilityVersion>
         <serializationVersion>0.2.8</serializationVersion>
@@ -57,24 +61,20 @@
         <webservicesRestVersion>2.12</webservicesRestVersion>
 
         <!--
+
+
             Rwanda Primary Care Module	2.0.7-SNAPSHOT
             OpenMRS EmrMonitor Module	1.0-SNAPSHOT
             Address Hierarchy Rwanda	1.2.5-SNAPSHOT
             Reporting Object Group	1.0.4.4-SNAPSHOT
             Usage Statistics	1.5-SNAPSHOT
             Order Extension	2.0-SNAPSHOT
-            Validation Module	1.0.1
             Row Per Patient Reports	1.5.3-SNAPSHOT
-            Groovy	2.2.4
-            HTML Form Entry Extensions for OpenMRS 1.9 Module	1.6.1
-            Form Filter Module	1.0.0
             simplelabentry	1.8-SNAPSHOT
             Rwanda Reports	2.5.8-SNAPSHOT
             Omod Export Module	1.0-SNAPSHOT
-            Patient Summary Module	1.4.0
-            Research Encounters	2.5
-            PIH Rwanda HIV Flowsheet	0.5.5
             Height Weight tracker	1.1-SNAPSHOT
+
         -->
 	</properties>
 
