Removed the register and researchencounter modules. We need to be sure if they are still being used

--- a/distro/pom.xml
+++ b/distro/pom.xml
@@ -130,33 +130,30 @@
                
         <dependency>
             <groupId>org.openmrs.module</groupId>
-            <artifactId>validation-api</artifactId>
+            <artifactId>validation-omod</artifactId>
             <version>${validationVersion}</version>
             <scope>provided</scope>
         </dependency>
         
          <dependency>
             <groupId>org.openmrs.module</groupId>
-            <artifactId>researchencounters-api</artifactId>
-            <version>${researchEncountersVersion}</version>
-            <scope>provided</scope>
-        </dependency>
-        
-         <dependency>
-            <groupId>org.openmrs.module</groupId>
-            <artifactId>patientflags-api</artifactId>
+            <artifactId>patientflags-omod</artifactId>
             <version>${patientFlagsVersion}</version>
             <scope>provided</scope>
         </dependency>
-        
-        <dependency>
-            <groupId>org.openmrs.module</groupId>
-            <artifactId>register-api</artifactId>
-            <version>${registerVersion}</version>
-            <scope>provided</scope>
-        </dependency>
 
-
+<!--   TODO: Add the below modules
+            addressHierarchyRwandaVersion
+            emrmonitorVersion
+            heightweighttrackerVersion
+            rwandaprimarycareVersion
+            reportingobjectgroupVersion
+            orderExtensionVersion
+            pihrwandahivflowsheet
+            rowperpatientreportsVersion
+            simplelabentryVersion
+            rwandareportsVersion
+-->
                 <dependency>
                     <groupId>org.openmrs.module</groupId>
                     <artifactId>reporting-omod</artifactId>
